horizontal scroll fix

--- a/css/tracks.css
+++ b/css/tracks.css
@@ -77,7 +77,6 @@
     }
     
     .tracks-row {
-        width: 340px !important;
         text-align: center !important;
         margin-top: 0px;
         margin-left: 28px;
